<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.10"
        android:orientation="horizontal"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_One"
            android:id="@+id/buttonRssFeed1"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_AddRss"
            android:id="@+id/buttonAddFeed"
            android:layout_weight="1"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_DeleteRss"
            android:id="@+id/buttonDeleteFeed"
            android:layout_weight="1"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.30"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_RssFeedXML"
            />

    </ScrollView>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.50"
        android:id="@+id/listView_FeedsUrls"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.10"
        android:id="@+id/textView_Info"
        android:text="@string/info"/>

</LinearLayout>